# multi-engine-seo-audit

./: .dockerignore  .gitignore  BYDFI_REMEDIATION_PLAN.md  CODEX_INVESTIGATION.md  COMPARISON_WITH_WILL.md  CREDENTIALS_SETUP.md  Dockerfile  EXECUTIVE_SUMMARY.md  GOOGLE_RANKING_COVERAGE.md  LICENSE  MANON_QUICKSTART.md  PLATFORM_REMEDIATION_PLAN.md  PRD.md  README.md  SKILL.md  USAGE.md  V1_MILESTONE_REPORT.md  V2_MILESTONE_REPORT.md  WILL_ONBOARDING.md  _generic_detector_runner.py  _modes.py  _observability.py  _page_type.py  _plugins.py  _ratelimit.py  _resilience.py  _router.py  _scope.py  _secrets.py  _tenant.py  cli.py  config.yaml  fix_guide.py  fly.toml  install.sh  orchestrator.py  pyproject.toml  rule_loader.py  web_dashboard.py
agents/: __init__.py  _schema.py  apply_patch.py  compare.py  competitor.py  content_generator.py  conversion_attribution.py  crawler.py  cross_llm.py  decay.py  entity.py  feedback.py  gate.py  geo.py  keyword_discovery.py  lifecycle.py  localization.py  log.py  negative_seo.py  report.py  roi_predictor.py  rule_sync.py  safety.py  semantic.py  serp.py  technical.py
detectors/: __init__.py  a11y.py  ai.py  baidu.py  bing.py  bydfi.py  canonical.py  cloaking.py  compliance.py  composite.py  content.py  crawl.py  ddg.py  disclosure.py  discover.py  duplicate.py  eeat.py  experiment.py  freshness.py  geo.py  google_2024.py  hidden_content.py  hreflang.py  image.py  jp.py  js.py  keyword.py  link_quality.py  linking.py  meta_desc.py  migration.py  mobile.py  multilingual.py  naver.py  navigation.py  news.py  perf.py  platform.py  (+22 more)
(+137 files in other folders)
